option('ack_experimental',
       type: 'boolean',
       value: false,
       description: 'User acknowledges experimental build')

option('clients',
       type: 'array',
       choices: ['gtk3.22'],
       value: ['gtk3.22'],
       description: 'Clients to build')

option('fcmp',
       type: 'array',
       choices: ['gtk3','cli'],
       value: ['gtk3'],
       description: 'Modpack installer UIs to build')

option('cacert-path',
       type: 'string',
       value: '',
       description: 'Custom path to CA cert bundle')
