option('ack_experimental',
       type: 'boolean',
       value: false,
       description: 'User acknowledges experimental build')

option('clients',
       type: 'array',
       choices: ['gtk3.22','sdl2', 'qt'],
       value: ['gtk3.22'],
       description: 'Clients to build')

option('fcmp',
       type: 'array',
       choices: ['gtk3','qt','cli','gtk4'],
       value: ['gtk3'],
       description: 'Modpack installer UIs to build')

option('cacert-path',
       type: 'string',
       value: '',
       description: 'Custom path to CA cert bundle')

option('json-protocol',
       type: 'boolean',
       value: false,
       description: 'Build in json-protocol support')

option('syslua',
       type: 'combo',
       choices: ['try', 'true', 'false'],
       description: 'Use lua from system')

option('audio',
       type: 'boolean',
       value: true,
       description: 'Build in sound support')

option('ruledit',
       type: 'boolean',
       value: true,
       description: 'Build ruleset editor')

option('nls',
       type: 'boolean',
       value: true,
       description: 'Native Language Support')

option('gitrev',
       type: 'boolean',
       value: false,
       description: 'Include git commit id to the version string')

option('freeciv-web',
       type: 'boolean',
       value: false,
       description: 'Make a freeciv-web server build instead of normal one')

option('qtver',
       type: 'combo',
       choices: ['qt5', 'qt6'],
       value: 'qt6',
       description: 'Whether to build Qt5 or Qt6 versions of the binaries')
